[package]
name = "crypto_websockets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tungstenite = "0.10"
tokio-tungstenite = { version = "0.10", features = ["tls"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
failure = "0.1"
serde_json = "1.0"
tokio = {version="0.2", features = ["full"]}
streamunordered = "0.5"
tracing = "0.1"
url = "2"
snafu = "0.6"
flate2 = "1.0"
data-encoding = "2.1.2"
percent-encoding = "1.0.1"
ring = "0.13.0-alpha"
hex = "0.4"
base64 = "~0.6.0"
chrono = { version = "0.4", features = ["serde"] }
simple_logger = "1.0.1"





[lib]
name = "crypto_websockets"
path = "src/lib.rs"
